// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statefulExample compiles 1`] = `
Object {
  "declarations": Array [
    Object {
      "id": Object {
        "name": "App",
        "type": "Identifier",
      },
      "init": Object {
        "async": false,
        "body": Object {
          "body": Array [
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "valueKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "value",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "targetKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "target",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "listKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "list",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "currentKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "current",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "doneKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "done",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "falseKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "false",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "defaultCurrent",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "textKey",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "text",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "defaultState",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "extra": Object {
                      "parenStart": 0,
                      "parenthesized": true,
                    },
                    "loc": undefined,
                    "properties": Array [
                      Object {
                        "computed": false,
                        "key": Object {
                          "extra": Object {
                            "raw": "\\"list\\"",
                            "rawValue": "list",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "list",
                        },
                        "loc": undefined,
                        "shorthand": false,
                        "type": "ObjectProperty",
                        "value": Object {
                          "elements": Array [],
                          "loc": undefined,
                          "type": "ArrayExpression",
                        },
                      },
                      Object {
                        "computed": false,
                        "key": Object {
                          "extra": Object {
                            "raw": "\\"current\\"",
                            "rawValue": "current",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "current",
                        },
                        "loc": undefined,
                        "shorthand": false,
                        "type": "ObjectProperty",
                        "value": Object {
                          "extra": Object {
                            "raw": "\\"\\"",
                            "rawValue": "",
                          },
                          "loc": undefined,
                          "type": "StringLiteral",
                          "value": "",
                        },
                      },
                    ],
                    "type": "ObjectExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "submitLabel",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "Submit",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "getValueFromEvent",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "name": "event",
                              "type": "Identifier",
                            },
                          ],
                          "callee": Object {
                            "arguments": Array [
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "currentKey",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "objectOf",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "valueKey",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "get",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "targetKey",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "get",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                            ],
                            "callee": Object {
                              "name": "compose",
                              "type": "Identifier",
                            },
                            "type": "CallExpression",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "underverk.useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "addTodo",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "name": "event",
                              "type": "Identifier",
                            },
                          ],
                          "callee": Object {
                            "arguments": Array [
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "listKey",
                                    "type": "Identifier",
                                  },
                                  Object {
                                    "arguments": Array [
                                      Object {
                                        "arguments": Array [
                                          Object {
                                            "name": "doneKey",
                                            "type": "Identifier",
                                          },
                                          Object {
                                            "name": "falseKey",
                                            "type": "Identifier",
                                          },
                                          Object {
                                            "arguments": Array [
                                              Object {
                                                "name": "textKey",
                                                "type": "Identifier",
                                              },
                                              Object {
                                                "arguments": Array [
                                                  Object {
                                                    "name": "currentKey",
                                                    "type": "Identifier",
                                                  },
                                                  Object {
                                                    "name": "state",
                                                    "type": "Identifier",
                                                  },
                                                ],
                                                "callee": Object {
                                                  "name": "get",
                                                  "type": "Identifier",
                                                },
                                                "type": "CallExpression",
                                              },
                                            ],
                                            "callee": Object {
                                              "name": "objectOf",
                                              "type": "Identifier",
                                            },
                                            "type": "CallExpression",
                                          },
                                        ],
                                        "callee": Object {
                                          "name": "set",
                                          "type": "Identifier",
                                        },
                                        "type": "CallExpression",
                                      },
                                      Object {
                                        "arguments": Array [
                                          Object {
                                            "name": "listKey",
                                            "type": "Identifier",
                                          },
                                          Object {
                                            "name": "state",
                                            "type": "Identifier",
                                          },
                                        ],
                                        "callee": Object {
                                          "name": "get",
                                          "type": "Identifier",
                                        },
                                        "type": "CallExpression",
                                      },
                                    ],
                                    "callee": Object {
                                      "name": "append",
                                      "type": "Identifier",
                                    },
                                    "type": "CallExpression",
                                  },
                                ],
                                "callee": Object {
                                  "name": "set",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "currentKey",
                                    "type": "Identifier",
                                  },
                                  Object {
                                    "name": "defaultCurrent",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "set",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                              Object {
                                "arguments": Array [
                                  Object {
                                    "name": "state",
                                    "type": "Identifier",
                                  },
                                ],
                                "callee": Object {
                                  "name": "constant",
                                  "type": "Identifier",
                                },
                                "type": "CallExpression",
                              },
                            ],
                            "callee": Object {
                              "name": "compose",
                              "type": "Identifier",
                            },
                            "type": "CallExpression",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "underverk.useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "elements": Array [
                      Object {
                        "name": "state",
                        "type": "Identifier",
                      },
                      Object {
                        "name": "setState",
                        "type": "Identifier",
                      },
                    ],
                    "type": "ArrayPattern",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "name": "defaultState",
                        "type": "Identifier",
                      },
                    ],
                    "callee": Object {
                      "name": "underverk.useState",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "handleCurrentChange",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "arguments": Array [
                                Object {
                                  "name": "event",
                                  "type": "Identifier",
                                },
                                Object {
                                  "name": "state",
                                  "type": "Identifier",
                                },
                              ],
                              "callee": Object {
                                "name": "getValueFromEvent",
                                "type": "Identifier",
                              },
                              "type": "CallExpression",
                            },
                          ],
                          "callee": Object {
                            "name": "setState",
                            "type": "Identifier",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "underverk.useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "updateClick",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "async": false,
                        "body": Object {
                          "arguments": Array [
                            Object {
                              "arguments": Array [
                                Object {
                                  "name": "event",
                                  "type": "Identifier",
                                },
                                Object {
                                  "name": "state",
                                  "type": "Identifier",
                                },
                              ],
                              "callee": Object {
                                "name": "addTodo",
                                "type": "Identifier",
                              },
                              "type": "CallExpression",
                            },
                          ],
                          "callee": Object {
                            "name": "setState",
                            "type": "Identifier",
                          },
                          "type": "CallExpression",
                        },
                        "params": Array [
                          Object {
                            "name": "event",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrowFunctionExpression",
                      },
                      Object {
                        "elements": Array [
                          Object {
                            "name": "state",
                            "type": "Identifier",
                          },
                        ],
                        "type": "ArrayExpression",
                      },
                    ],
                    "callee": Object {
                      "name": "underverk.useCallback",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "list",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "name": "listKey",
                        "type": "Identifier",
                      },
                      Object {
                        "name": "state",
                        "type": "Identifier",
                      },
                    ],
                    "callee": Object {
                      "name": "get",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "expression": Object {
                "arguments": Array [
                  Object {
                    "async": false,
                    "body": Object {
                      "body": Array [
                        Object {
                          "expression": Object {
                            "arguments": Array [
                              Object {
                                "name": "list",
                                "type": "Identifier",
                              },
                              Object {
                                "name": "noop",
                                "type": "Identifier",
                              },
                            ],
                            "callee": Object {
                              "name": "log",
                              "type": "Identifier",
                            },
                            "type": "CallExpression",
                          },
                          "type": "ExpressionStatement",
                        },
                      ],
                      "directives": Array [],
                      "type": "BlockStatement",
                    },
                    "params": Array [],
                    "type": "ArrowFunctionExpression",
                  },
                  Object {
                    "elements": Array [
                      Object {
                        "name": "list",
                        "type": "Identifier",
                      },
                    ],
                    "type": "ArrayExpression",
                  },
                ],
                "callee": Object {
                  "name": "underverk.useEffect",
                  "type": "Identifier",
                },
                "type": "CallExpression",
              },
              "type": "ExpressionStatement",
            },
            Object {
              "argument": Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "closingElement": null,
                    "openingElement": Object {
                      "attributes": Array [
                        Object {
                          "name": Object {
                            "name": "onChange",
                            "type": "JSXIdentifier",
                          },
                          "type": "JSXAttribute",
                          "value": Object {
                            "expression": Object {
                              "name": "handleCurrentChange",
                              "type": "Identifier",
                            },
                            "type": "JSXExpressionContainer",
                          },
                        },
                        Object {
                          "name": Object {
                            "name": "value",
                            "type": "JSXIdentifier",
                          },
                          "type": "JSXAttribute",
                          "value": Object {
                            "expression": Object {
                              "name": "value",
                              "type": "Identifier",
                            },
                            "type": "JSXExpressionContainer",
                          },
                        },
                      ],
                      "name": Object {
                        "name": "input",
                        "type": "JSXIdentifier",
                      },
                      "selfClosing": true,
                      "type": "JSXOpeningElement",
                    },
                    "selfClosing": true,
                    "type": "JSXElement",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "expression": Object {
                          "name": "submitLabel",
                          "type": "Identifier",
                        },
                        "type": "JSXExpressionContainer",
                      },
                    ],
                    "closingElement": Object {
                      "name": Object {
                        "name": "button",
                        "type": "JSXIdentifier",
                      },
                      "type": "JSXClosingElement",
                    },
                    "openingElement": Object {
                      "attributes": Array [
                        Object {
                          "name": Object {
                            "name": "onClick",
                            "type": "JSXIdentifier",
                          },
                          "type": "JSXAttribute",
                          "value": Object {
                            "expression": Object {
                              "name": "updateClick",
                              "type": "Identifier",
                            },
                            "type": "JSXExpressionContainer",
                          },
                        },
                      ],
                      "name": Object {
                        "name": "button",
                        "type": "JSXIdentifier",
                      },
                      "selfClosing": false,
                      "type": "JSXOpeningElement",
                    },
                    "selfClosing": false,
                    "type": "JSXElement",
                  },
                  Object {
                    "children": Array [
                      Object {
                        "expression": Object {
                          "arguments": Array [
                            Object {
                              "name": "TodoItem",
                              "type": "Identifier",
                            },
                            Object {
                              "name": "list",
                              "type": "Identifier",
                            },
                          ],
                          "callee": Object {
                            "name": "underverk.dynamicNode",
                            "type": "Identifier",
                          },
                          "type": "CallExpression",
                        },
                        "type": "JSXExpressionContainer",
                      },
                    ],
                    "closingElement": Object {
                      "name": Object {
                        "name": "ul",
                        "type": "JSXIdentifier",
                      },
                      "type": "JSXClosingElement",
                    },
                    "openingElement": Object {
                      "attributes": Array [],
                      "name": Object {
                        "name": "ul",
                        "type": "JSXIdentifier",
                      },
                      "selfClosing": false,
                      "type": "JSXOpeningElement",
                    },
                    "selfClosing": false,
                    "type": "JSXElement",
                  },
                ],
                "closingFragment": Object {
                  "type": "JSXClosingFragment",
                },
                "openingFragment": Object {
                  "type": "JSXOpeningFragment",
                },
                "type": "JSXFragment",
              },
              "type": "ReturnStatement",
            },
          ],
          "directives": Array [],
          "type": "BlockStatement",
        },
        "params": Array [],
        "type": "ArrowFunctionExpression",
      },
      "type": "VariableDeclarator",
    },
  ],
  "kind": "const",
  "type": "VariableDeclaration",
}
`;

exports[`statefulExample generates 1`] = `
"const App = () => {
  const valueKey = \\"value\\";
  const targetKey = \\"target\\";
  const listKey = \\"list\\";
  const currentKey = \\"current\\";
  const doneKey = \\"done\\";
  const falseKey = \\"false\\";
  const defaultCurrent = \\"\\";
  const textKey = \\"text\\";
  const defaultState = {
    \\"list\\": [],
    \\"current\\": \\"\\"
  };
  const submitLabel = \\"Submit\\";
  const getValueFromEvent = underverk.useCallback((state, event) => compose(objectOf(currentKey), get(valueKey), get(targetKey))(event), []);
  const addTodo = underverk.useCallback((event, state) => compose(set(listKey, append(set(doneKey, falseKey, objectOf(textKey, get(currentKey, state))), get(listKey, state))), set(currentKey, defaultCurrent), constant(state))(event), []);
  const [state, setState] = underverk.useState(defaultState);
  const handleCurrentChange = underverk.useCallback(event => setState(getValueFromEvent(event, state)), [state]);
  const updateClick = underverk.useCallback(event => setState(addTodo(event, state)), [state]);
  const list = get(listKey, state);
  underverk.useEffect(() => {
    log(list, noop);
  }, [list]);
  return <><input onChange={handleCurrentChange} value={value} /><button onClick={updateClick}>{submitLabel}</button><ul>{underverk.dynamicNode(TodoItem, list)}</ul></>;
};"
`;

exports[`statefulExample generates 2`] = `
"const TodoItem = () => {
  const emptyObject = {};
  const checkedProps = if(done, emptyObject);
  return <><li>{text}{underverk.dynamicNode(Checkmark, checkedProps)}</li></>;
};"
`;

exports[`statefulExample generates 3`] = `
"const Checkmark = () => {
  const width = 20;
  const height = 20;
  const path = \\"M0,5 L0,5 L5,10 L10,0 Z\\";
  const noneFill = \\"none\\";
  const strokeWidth = \\"1px\\";
  return <><svg width={width} height={height}><path fill={noneFill} strokeWidth={strokeWidth} d={path} /></svg></>;
};"
`;

exports[`staticExample compiles 1`] = `
Object {
  "declarations": Array [
    Object {
      "id": Object {
        "name": "Button",
        "type": "Identifier",
      },
      "init": Object {
        "async": false,
        "body": Object {
          "body": Array [
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "hello",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "Hello",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "world",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "type": "StringLiteral",
                    "value": "World",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "declarations": Array [
                Object {
                  "id": Object {
                    "name": "label",
                    "type": "Identifier",
                  },
                  "init": Object {
                    "arguments": Array [
                      Object {
                        "name": "hello",
                        "type": "Identifier",
                      },
                      Object {
                        "name": "world",
                        "type": "Identifier",
                      },
                    ],
                    "callee": Object {
                      "name": "concat",
                      "type": "Identifier",
                    },
                    "type": "CallExpression",
                  },
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            Object {
              "argument": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "expression": Object {
                          "name": "label",
                          "type": "Identifier",
                        },
                        "type": "JSXExpressionContainer",
                      },
                    ],
                    "closingElement": Object {
                      "name": Object {
                        "name": "div",
                        "type": "JSXIdentifier",
                      },
                      "type": "JSXClosingElement",
                    },
                    "openingElement": Object {
                      "attributes": Array [],
                      "name": Object {
                        "name": "div",
                        "type": "JSXIdentifier",
                      },
                      "selfClosing": false,
                      "type": "JSXOpeningElement",
                    },
                    "selfClosing": false,
                    "type": "JSXElement",
                  },
                ],
                "closingFragment": Object {
                  "type": "JSXClosingFragment",
                },
                "openingFragment": Object {
                  "type": "JSXOpeningFragment",
                },
                "type": "JSXFragment",
              },
              "type": "ReturnStatement",
            },
          ],
          "directives": Array [],
          "type": "BlockStatement",
        },
        "params": Array [],
        "type": "ArrowFunctionExpression",
      },
      "type": "VariableDeclarator",
    },
  ],
  "kind": "const",
  "type": "VariableDeclaration",
}
`;

exports[`staticExample generates 1`] = `
"const Button = () => {
  const hello = \\"Hello\\";
  const world = \\"World\\";
  const label = concat(hello, world);
  return <><div>{label}</div></>;
};"
`;
